Change grid width to fix overlapping words

--- a/briefy_css/yourbrief.css
+++ b/briefy_css/yourbrief.css
@@ -294,7 +294,7 @@ h4 {
   margin-bottom: 6em;
   display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   grid-column-gap: 3em;
   grid-row-gap: 3em;
 }
